[package]
name = "ytdl"
author = "Stoyko Tolev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
ytd-rs = {version = "0.1.7", features = ["yt-dlp"] }
url = "2.4.1"
